@@ -1075,6 +1075,11 @@ WheelSections=ALWAYS means sections in group + ABC; NEVER means no sections;::AB
 Translations=Choose whether to displays song titles in their native::language (日本語), or to transliterate when possible
 Lyrics=Choose whether to show lyrics if a song::has them available (LRC File)
 
+[ScreenAutogenOptions]
+HelpText=&UP; &DOWN; to change line   &LEFT; &RIGHT; to select between options::START to accept changes   BACK to discard changes
+AutogenMissingTypes=Show steps for songs that were created by Autogen.
+AutogenGroupCourses=Show group Nonstop and Endless courses that::were created by Autogen.
+
 [ScreenUnlock]
 NextScreen=ScreenRanking
 
@@ -1205,6 +1210,7 @@ GraphicOptions=
 GameplayOptions=
 AppearanceOptions=
 SoundOptions=
+AutogenOptions=
 
 [TextBanner]
 Width=180
