@@ -24,11 +24,11 @@
 #include "GameManager.h"
 #include "GameState.h"
 #include "ThemeManager.h"
-#include "ScreenMiniMenu.h"
 
 
 enum {
-	OM_APPEARANCE = 0,
+	OM_APPEARANCE,
+	OM_AUTOGEN,
 	OM_CONFIG_KEY_JOY,
 	OM_INPUT,
 	OM_GAMEPLAY,
@@ -40,6 +40,7 @@ enum {
 
 OptionRow g_OptionsMenuLines[NUM_OPTIONS_MENU_LINES] = {
 	OptionRow( "",	"Appearance Options" ),
+	OptionRow( "",	"Autogen Options" ),
 	OptionRow( "",	"Config Key/Joy Mappings" ),
 	OptionRow( "",	"Input Options" ),
 	OptionRow( "",	"Gameplay Options" ),
@@ -75,7 +76,6 @@ void ScreenOptionsMenu::ImportOptions()
 
 void ScreenOptionsMenu::ExportOptions()
 {
-
 }
 
 void ScreenOptionsMenu::GoToPrevState()
@@ -88,6 +88,7 @@ void ScreenOptionsMenu::GoToNextState()
 	switch( this->m_iCurrentRow[0] )
 	{
 		case OM_APPEARANCE:		SCREENMAN->SetNewScreen("ScreenAppearanceOptions");	break;
+		case OM_AUTOGEN:		SCREENMAN->SetNewScreen("ScreenAutogenOptions");	break;
 		case OM_CONFIG_KEY_JOY:	SCREENMAN->SetNewScreen("ScreenMapControllers");	break;
 		case OM_GAMEPLAY:		SCREENMAN->SetNewScreen("ScreenGameplayOptions");	break;
 		case OM_GRAPHIC:		SCREENMAN->SetNewScreen("ScreenGraphicOptions");	break;
