@@ -49,6 +49,7 @@ public:
 	vector<Course*> m_pCourses;
 
 	void InitCoursesFromDisk();
+	void InitAutogenCourses();
 	void FreeCourses();
 	void CleanData();
 
@@ -65,9 +66,9 @@ public:
 	Song* GetRandomSong();
 
 
-	void GetNonstopCourses( vector<Course*> &AddTo );	// add to if life meter type is BAR.
-	void GetOniCourses( vector<Course*> &AddTo );		// add to if life meter type is BATTERY.
-	void GetEndlessCourses( vector<Course*> &AddTo );	// add to if set to REPEAT.
+	void GetNonstopCourses( vector<Course*> &AddTo, bool bIncludeAutogen );	// add to if life meter type is BAR.
+	void GetOniCourses( vector<Course*> &AddTo, bool bIncludeAutogen );		// add to if life meter type is BATTERY.
+	void GetEndlessCourses( vector<Course*> &AddTo, bool bIncludeAutogen );	// add to if set to REPEAT.
 
 	void GetExtraStageInfo( bool bExtra2, CString sPreferredGroup, const StyleDef *s, 
 		Song*& pSongOut, Notes*& pNotesOut, PlayerOptions& po_out, SongOptions& so_out );
